// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import storageAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const storageAdapter = storageAdapter_constructor(
      storageAdapter_options,
      storageAdapter_imports
    )
export default storageAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
const storageAdapter_constructor = interopRequireDefault(
  __non_webpack_require__(process.env[\\"STORAGE_ADAPTER\\"])
).default
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": process.env[\\"STORAGE_OPTIONS_URL\\"]
}
const storageAdapter = storageAdapter_constructor(
      storageAdapter_options,
      storageAdapter_imports
    )
export default storageAdapter
"
`;
